; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-aimslab.c_rt_mute.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-aimslab.c_rt_mute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtrack = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtrack*)* @rt_mute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt_mute(%struct.rtrack* %0) #0 {
  %2 = alloca %struct.rtrack*, align 8
  store %struct.rtrack* %0, %struct.rtrack** %2, align 8
  %3 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %4 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %3, i32 0, i32 0
  store i32 1, i32* %4, align 4
  %5 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %6 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %5, i32 0, i32 1
  %7 = call i32 @mutex_lock(i32* %6)
  %8 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %9 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @outb(i32 208, i32 %10)
  %12 = load %struct.rtrack*, %struct.rtrack** %2, align 8
  %13 = getelementptr inbounds %struct.rtrack, %struct.rtrack* %12, i32 0, i32 1
  %14 = call i32 @mutex_unlock(i32* %13)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
